src/test/resources/extension/invalid/newtype/structEmpty.awsl
begin

newtype Nothing is union
end

exit 0;

end